# nelisp

./: .gitattributes  .gitignore  AGENTS.md  BRIEFING.org  CLAUDE.md  Cargo.toml  Makefile  README-stage-d-v2.0.org  README-stage-d-v3.0.org  README-stage-d.org  README.org  RELEASE_NOTES.md  install.sh
.cargo/: config.toml
anvil-runtime/: Cargo.toml
anvil-runtime/src/: anvil_file_registry.rs  anvil_host_registry.rs  anvil_module_registry.rs  anvil_tools_registry.rs  lib.rs
anvil-runtime/src/mcp/: mod.rs
bench/: nelisp-actor-bench.el  nelisp-allocator-bench.el  nelisp-bench.el  nelisp-cc-bench-actual.el  nelisp-gc-bench.el
build-tool/: Cargo.toml  build.rs
build-tool/src/: ast_translate.rs  image.rs  image_lowering.rs  lib.rs  native_emit.rs
build-tool/src/bridge/: loader.rs  mod.rs  takeover.rs
build-tool/src/eval/: alloc_mem.rs  builtins.rs  cons_primitives.rs  dlsym_bridge.rs  env.rs  env_helpers.rs  env_lexframe.rs  env_lexframe_phase47_shims.rs  env_mirror.rs  env_shim.rs  error.rs  ffi.rs  mod.rs  nlboolvector.rs  nlboxes.rs  nlcell.rs  nlchartable.rs  nlconsbox.rs  nlrc.rs  nlrecord.rs  nlstr.rs  nlstr_externs.rs  nlvector.rs  quit.rs  raw_mem.rs  rc_primitives.rs  sexp.rs  sexp_abi_assert.rs  special_forms.rs  tests.rs  tty.rs
build-tool/src/jit/: access.rs  arith.rs  bench.rs  box_accessor.rs  bridge.rs  cons.rs  dsl.rs  float.rs  hash.rs  math.rs  mod.rs  predicate.rs  regex.rs  strategy.rs  strings.rs  syscall.rs  time.rs
build-tool/src/reader/: error.rs  lexer.rs  mod.rs  parser.rs  sexp.rs
build-tool/tests/: elisp_cc_alloc_dealloc_probe.rs  elisp_cc_aref_vector_probe.rs  elisp_cc_atomic_raw_mem_probe.rs  elisp_cc_bi_make_vector_probe.rs  elisp_cc_bi_quit_flag_probe.rs  elisp_cc_bi_read_stdin_bytes_probe.rs  elisp_cc_bi_signal_dispatch_probe.rs  elisp_cc_bi_string_bytes_probe.rs  elisp_cc_bi_write_stdout_bytes_probe.rs  elisp_cc_bind_formals_probe.rs  elisp_cc_cons_construct_probe.rs  elisp_cc_cstr_helpers_probe.rs  elisp_cc_eq_symbol_probe.rs  elisp_cc_extern_call_f64_probe.rs  elisp_cc_fact_i64_probe.rs  elisp_cc_fnv1a_probe.rs  elisp_cc_frame_bind_probe.rs  elisp_cc_frame_pop_probe.rs  elisp_cc_frame_push_probe.rs  elisp_cc_frame_stack_depth_probe.rs  elisp_cc_frame_stack_ensure_capacity_probe.rs  elisp_cc_frame_stack_find_probe.rs  elisp_cc_gc_walk_children_probe.rs  elisp_cc_int_neg_probe.rs  elisp_cc_jit_aref_probe.rs  elisp_cc_jit_arith_probe.rs  elisp_cc_jit_aset_probe.rs  elisp_cc_jit_elt_probe.rs  elisp_cc_jit_float_probe.rs  elisp_cc_jit_length_probe.rs  elisp_cc_jit_predicate_eq_probe.rs  elisp_cc_jit_record_len_probe.rs  elisp_cc_jit_record_ref_probe.rs  elisp_cc_jit_record_set_probe.rs  elisp_cc_jit_record_type_probe.rs  elisp_cc_jit_ref_eq_probe.rs  elisp_cc_length_cons_probe.rs  elisp_cc_mirror_clear_function_probe.rs  elisp_cc_mirror_clear_value_probe.rs  elisp_cc_mirror_install_entry_probe.rs  (+52 more)
build-tool/tests/fixtures/: bootstrap.el
docs/: 00-motivation.org  01-related-work.org  02-scoping.org  03-architecture.org  04-concurrency.org  05-roadmap.org  90-ideas-backlog.org  announcement-2026-04-27.md  bootstrap-quickstart.org  coding-table-provenance.org  handoff-image-abi-bootstrap-2026-04-30.md  phase1-macro-design.org  runtime-limitations.md  wave-7-cheatsheet.org
examples/: nelisp-async-editor.el  nelisp-x11-dired.el  nelisp-x11-editor.el
lisp/: anvil-standalone-db.el  doc47-build-tool-reader.el  doc47-mint.el  nelisp-aot-compiler.el  nelisp-artifact.el  nelisp-asm-arm64.el  nelisp-asm-x86_64.el  nelisp-bake-fixtures.el  nelisp-build-host.el  nelisp-cc-alloc-dealloc.el  nelisp-cc-alloc-mem.el  nelisp-cc-apply-lambda-inner.el  nelisp-cc-aref-vector.el  nelisp-cc-atomic-raw-mem.el  nelisp-cc-bf-args-nth-ptr.el  nelisp-cc-bf-formal-tag.el  nelisp-cc-bf-precompute.el  nelisp-cc-bi-emit-value.el  nelisp-cc-bi-f64-trunc.el  nelisp-cc-bi-getenv.el  nelisp-cc-bi-install-sigint-handler.el  nelisp-cc-bi-make-vector.el  nelisp-cc-bi-meta-dispatch-loop.el  nelisp-cc-bi-meta-walk.el  nelisp-cc-bi-nl-fact-i64.el  nelisp-cc-bi-nl-make-directory.el  nelisp-cc-bi-nl-write-file.el  nelisp-cc-bi-quit-flag.el  nelisp-cc-bi-read-stdin-bytes.el  nelisp-cc-bi-signal.el  nelisp-cc-bi-string-bytes.el  nelisp-cc-bi-syscall-canonicalize.el  nelisp-cc-bi-syscall-read-file.el  nelisp-cc-bi-syscall-resolve-nr.el  nelisp-cc-bi-syscall-stat-mtime.el  nelisp-cc-bi-syscall-stat.el  nelisp-cc-bi-tty-raw.el  nelisp-cc-bi-write-stderr-line.el  nelisp-cc-bi-write-stdout-bytes.el  nelisp-cc-bind-formals.el  (+237 more)
nelisp-runtime/: Cargo.toml
nelisp-runtime-cli/: Cargo.toml
nelisp-runtime-cli/src/: main.rs
nelisp-runtime/benches/: nelisp_cc_bench.rs
nelisp-runtime/c-bindings/: nelisp-runtime-module.c  nelisp-sqlite-module.c
nelisp-runtime/src/: anvil_data_registry.rs  anvil_host_registry.rs  anvil_shell_filter_registry.rs  anvil_tools_registry.rs  lib.rs  main.rs  seed.rs  sqlite.rs
nelisp-runtime/src/bridge/: loader.rs  mod.rs
nelisp-runtime/src/eval/: builtins.rs  env.rs  error.rs  mod.rs  sexp.rs  special_forms.rs  tests.rs
nelisp-runtime/src/image/: boot.rs  dumper.rs  error.rs  format.rs  loader.rs  mod.rs  native_assets.rs  reloc.rs  signal.rs  value.rs
nelisp-runtime/src/mcp/: dispatch.rs  protocol.rs  tool.rs
nelisp-runtime/src/reader/: lexer.rs  mod.rs  parser.rs  sexp.rs
nelisp-runtime/src/syscall/: error.rs  fileio.rs  filenotify.rs  mod.rs  process.rs  unix.rs
nelisp-runtime/tests/: filenotify_test.rs  image_round_trip.rs  syscall_test.rs
nelisp-sqlite-rs/: Cargo.toml
nelisp-sqlite-rs/src/: lib.rs
nelisp-syscall-fileio/: Cargo.toml
nelisp-syscall-fileio/src/: lib.rs
nelisp-syscall-filenotify/: Cargo.toml
nelisp-syscall-process/: Cargo.toml
nelisp-syscall-types/: Cargo.toml
scripts/: compile-elisp-objects-meta.el  compile-elisp-objects.el  m1-bootsmoke.sh  m3-bootsmoke.sh  nelisp-ert-shim.el  nelisp-flat-arena-probe.el  nelisp-macos-build.el  nelisp-standalone-build.el  nelisp-stdlib-prelude.el  nelisp-windows-build.el  reader-surface-audit.el  verify-cross-platform.ps1  verify-cross-platform.sh  verify-full.sh  (+3 more)
(+548 files in other folders)
