[package]
name = "nelisp-build-tool"
version = "0.5.0"
edition = "2021"
description = "NeLisp build-time tool — Doc 47 §3.1 phase 6 carve-out (reader + minimal evaluator + Elisp self-host bridge)"
license = "GPL-3.0-or-later"

# Doc 47 §3.1 phase 6 carve-out:
#   Stage 5a (commit 622a8b4): workspace + empty crate stub.
#   Stage 5b (commit 5576070): absorbed `nelisp-runtime/src/bin/nelisp.rs`.
#   Stage 5c (this commit):    `git mv nelisp-runtime/src/{eval,reader,
#                              bridge}/` here; this crate now hosts the
#                              entire Doc 44 minimal interpreter.

[lib]
name = "nelisp_build_tool"
path = "src/lib.rs"

[features]
# Phase 7 Stage 7.7.c.2 (Doc 72): `image::compile_elisp_to_image' is
# the only path that calls `reader::read_all' from a non-test, non-
# bridge production callsite.  It is dev-tooling (= used by the
# `nelisp-baker' bin to refresh `lisp/*.image' artifacts) and not
# required by the production runtime, which only `decode_image' /
# `eval_image's pre-baked bytes.  Gating the encoder behind a feature
# flag means consumers that only run pre-baked images can build a
# narrower binary, and the production `nelisp' binary's `compile-
# image' CLI subcommand likewise becomes opt-in.
default = []
image-baker = []
# Doc 86 §86.3.b / Doc 89 §4.2 (2026-05-10) — env shadow path verify.
# When enabled, Tier 3 env ops (= `symbol-value' / `set' / `boundp' /
# `fboundp' / `symbol-function' / `fset' / `defalias' / `makunbound' /
# `fmakunbound', plus `set_value' / `lookup_value' callsites in
# `eval/mod.rs' / `eval/special_forms.rs') ALSO compute the result via
# the slim shim primitive's logic from `eval/env_shim.rs' and compare.
# On divergence: panic in tests, log a warning in production.  Default
# builds compile zero bytes from the verify block (= +0 LOC production).
env-shadow-verify = []

[[bin]]
name = "nelisp"
path = "src/bin/nelisp.rs"

# Phase 7 Stage 7.7.a (Doc 72): STDLIB elisp → AOT image baker.
# Run via `make bake-images` ahead of `cargo build` to refresh
# `lisp/*.image` artifacts that Stage 7.7.b's `STDLIB_IMAGES`
# embeds via `include_bytes!`.  Requires the `image-baker' feature
# (= Stage 7.7.c.2 gate on `image::compile_elisp_to_image').
[[bin]]
name = "nelisp-baker"
path = "src/bin/nelisp-baker.rs"
required-features = ["image-baker"]

[dependencies]
# Sweep 6 (2026-04-30): the previous nelisp-runtime path dependency
# (Doc 47 Stage 6d) was carried for `nelisp_runtime::image::*' wire-
# format types — `ImageReloc', `tag_int', `NL_VALUE_TAG_*', dumper,
# native asset constants.  That whole 2,420-LOC native-code-in-image
# subsystem was retired in favour of the local walking-skeleton
# `image.rs' module, which serializes real `Sexp' values and reuses
# the existing `eval/' to evaluate them — no wire types from sibling
# crate, no native asset constants, no seed loader / sqlite / syscall
# pull-in.  build-tool now has zero internal-crate deps.
#
# Doc 51 Phase 5 (2026-05-03): single generic FFI primitive `nl-ffi-call'
# added to expose any cdylib (= sqlite + syscall + future seed crates) to
# Elisp without per-function dispatch glue.  External crates only — keeps
# the "zero internal-crate deps" Sweep-6 invariant intact.
libloading = "0.8"
libffi = "3"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Doc 51 Track E (2026-05-04): libc for termios raw-mode + poll() to
# enable interactive TTY input wiring under the nelisp driver.  Used
# only by `terminal-raw-mode-enter' / `-leave' / `read-stdin-byte' /
# `read-stdin-byte-available' builtins.  Not pulled in for batch use.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Doc 84 §84.2 (2026-05-10) — `build.rs' codegen for
# `lisp/nelisp-syscall-table.el' (= elisp-side syscall name → number
# resolver).  Only `libc::SYS_*' constants are read at build time; no
# runtime libc dep is added through this entry (the runtime libc dep
# stays the `[target.'cfg(unix)'.dependencies]' one above).
[build-dependencies]
libc = "0.2"
