[package]
name = "nelisp-build-tool"
version = "0.5.0"
edition = "2021"
description = "NeLisp build-time tool — Doc 47 §3.1 phase 6 carve-out (reader + minimal evaluator + Elisp self-host bridge)"
license = "GPL-3.0-or-later"

# Doc 47 §3.1 phase 6 carve-out:
#   Stage 5a (commit 622a8b4): workspace + empty crate stub.
#   Stage 5b (commit 5576070): absorbed `nelisp-runtime/src/bin/nelisp.rs`.
#   Stage 5c (this commit):    `git mv nelisp-runtime/src/{eval,reader,
#                              bridge}/` here; this crate now hosts the
#                              entire Doc 44 minimal interpreter.

[lib]
name = "nelisp_build_tool"
path = "src/lib.rs"

[features]
default = []

[[bin]]
name = "nelisp"
path = "src/bin/nelisp.rs"

# Doc 100 v2 §100.B (2026-05-12) — Sexp ABI layout dump driver.
# Prints the Rust-side `ABI_EXPORT' rows in `NAME=VALUE' form so the
# `make sexp-abi-check' target can diff against `nelisp-sexp--abi-export'.
[[bin]]
name = "sexp-abi-emit"
path = "src/bin/sexp-abi-emit.rs"

[dependencies]
# Sweep 6 (2026-04-30): the previous nelisp-runtime path dependency
# (Doc 47 Stage 6d) was carried for `nelisp_runtime::image::*' wire-
# format types — `ImageReloc', `tag_int', `NL_VALUE_TAG_*', dumper,
# native asset constants.  That whole 2,420-LOC native-code-in-image
# subsystem was retired in favour of the local walking-skeleton
# `image.rs' module, which serializes real `Sexp' values and reuses
# the existing `eval/' to evaluate them — no wire types from sibling
# crate, no native asset constants, no seed loader / sqlite / syscall
# pull-in.  build-tool now has zero internal-crate deps.
#
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
# Doc 51 Track E (2026-05-04): libc for termios raw-mode + poll() to
# enable interactive TTY input wiring under the nelisp driver.  Used
# only by `terminal-raw-mode-enter' / `-leave' / `read-stdin-byte' /
# `read-stdin-byte-available' builtins.  Not pulled in for batch use.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Doc 84 §84.2 (2026-05-10) — `build.rs' codegen for
# `lisp/nelisp-syscall-table.el' (= elisp-side syscall name → number
# resolver).  Only `libc::SYS_*' constants are read at build time; no
# runtime libc dep is added through this entry (the runtime libc dep
# stays the `[target.'cfg(unix)'.dependencies]' one above).
[build-dependencies]
libc = "0.2"
