[package]
name = "nelisp-runtime"
version = "0.1.0"
edition = "2021"
description = "NeLisp Phase 7.0 OS syscall stub (Rust thin wrapper, ~300-500 LOC)"
license = "GPL-3.0-or-later"

# Phase 7.5.1 (Doc 32 v2 LOCKED §2.1 + §3.1) — staticlib added so the
# bin/anvil --strict-no-emacs path can statically link the runtime
# (rlib for cargo-internal consumers; staticlib for non-Rust binaries
# such as a future bin/anvil rewrite or C-side embeds).  cdylib is
# preserved for library users that prefer dynamic loading.
#
#   cargo build --release  →  target/release/
#     libnelisp_runtime.so      (cdylib, Linux)
#     libnelisp_runtime.dylib   (cdylib, macOS)
#     nelisp_runtime.dll        (cdylib, Windows)
#     libnelisp_runtime.rlib    (rlib, cargo-internal)
#     libnelisp_runtime.a       (staticlib, Linux/macOS)
#     nelisp_runtime.lib        (staticlib, Windows MSVC)
[lib]
name = "nelisp_runtime"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "nelisp-runtime"
path = "src/main.rs"

# Phase 7.1 完遂 gate 3-axis bench (Doc 28 v2 §5.1).  This is the
# *secondary* baseline measuring the FFI bridge overhead in isolation
# — the primary 3-axis gate (fib(30) 30x / fact-iter 20x / alloc-heavy
# 5x speedup vs bytecode VM) lives on the Lisp side and is driven by
# `make bench-actual`.  See benches/nelisp_cc_bench.rs commentary.
#
# Registered via `[[bench]]` with `harness = false` so we get a plain
# `fn main()` instead of the libtest harness; criterion is intentionally
# kept out of the dep graph (Doc 27 §3 7.0 keeps Cargo.toml libc-only).
[[bench]]
name = "nelisp_cc_bench"
path = "benches/nelisp_cc_bench.rs"
harness = false

[dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
# T68 (CRITICAL #3 / Phase 7.5.4 hardening) — `panic = "abort"` makes
# Rust panics terminate the *whole* process instead of unwinding
# across the FFI boundary.  Unwinding through `extern "C"` is UB
# (https://doc.rust-lang.org/nomicon/ffi.html#ffi-and-unwinding) and
# our cdylib is dlopen'd from C wrappers (nelisp-runtime-module.c),
# so we deliberately give up the option to catch panics in exchange
# for never letting a stray panic walk back into Emacs's stack.
panic = "abort"
