[package]
name = "nelisp-runtime"
version = "0.1.0"
edition = "2021"
description = "NeLisp Phase 7.0 OS syscall stub (Rust thin wrapper, ~300-500 LOC)"
license = "GPL-3.0-or-later"

# Phase 7.5.1 (Doc 32 v2 LOCKED §2.1 + §3.1) — staticlib added so the
# bin/anvil --strict-no-emacs path can statically link the runtime
# (rlib for cargo-internal consumers; staticlib for non-Rust binaries
# such as a future bin/anvil rewrite or C-side embeds).  cdylib is
# preserved for library users that prefer dynamic loading.
#
#   cargo build --release  →  target/release/
#     libnelisp_runtime.so      (cdylib, Linux)
#     libnelisp_runtime.dylib   (cdylib, macOS)
#     nelisp_runtime.dll        (cdylib, Windows)
#     libnelisp_runtime.rlib    (rlib, cargo-internal)
#     libnelisp_runtime.a       (staticlib, Linux/macOS)
#     nelisp_runtime.lib        (staticlib, Windows MSVC)
[lib]
name = "nelisp_runtime"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "nelisp-runtime"
path = "src/main.rs"

# Architecture α Wave 3 (2026-04-29) — `anvil-mcp-demo` and
# `anvil-runtime' binaries (and the `mcp::*' / `anvil_*_registry'
# modules they depend on) moved to the sibling `anvil-runtime' crate
# so this crate stays a pure NeLisp interpreter.  See
# `../anvil-runtime/Cargo.toml' for the relocated bin targets.

# Doc 47 §3.1 phase 6 / Stage 5b (2026-04-30) — the small `nelisp`
# `--eval` / `--read` driver moved to `../build-tool/src/bin/nelisp.rs`.
# It depended on `eval::eval_str` + `reader::fmt_sexp`, both of which
# Stage 5c will pull out of `nelisp-runtime` entirely; co-locating the
# binary with the modules it needs is the smallest first step.
#
# Phase 7.1 完遂 gate 3-axis bench (Doc 28 v2 §5.1).  This is the
# *secondary* baseline measuring the FFI bridge overhead in isolation
# — the primary 3-axis gate (fib(30) 30x / fact-iter 20x / alloc-heavy
# 5x speedup vs bytecode VM) lives on the Lisp side and is driven by
# `make bench-actual`.  See benches/nelisp_cc_bench.rs commentary.
#
# Registered via `[[bench]]` with `harness = false` so we get a plain
# `fn main()` instead of the libtest harness; criterion is intentionally
# kept out of the dep graph (Doc 27 §3 7.0 keeps Cargo.toml libc-only).
[[bench]]
name = "nelisp_cc_bench"
path = "benches/nelisp_cc_bench.rs"
harness = false

# Phase 9d.A1 (T76 / T54 Wave 1 agent A) — file I/O syscall extension
# is gated behind `fileio-syscalls` so a future "mini build" of the
# runtime (no directory / unlink / rename surface) can opt out without
# code surgery.  Default ON: the standalone anvil bootstrap path Doc
# 27/32 calls out as Phase 9d depends on these primitives.
[features]
default = ["fileio-syscalls", "process-syscalls"]
fileio-syscalls = []
# Phase 9d.J (T100 / Doc 39 LOCKED-2026-04-25-v2 §3.J) — subprocess
# syscall extension (~12 new `nl_syscall_*` symbols: fork / execve /
# posix_spawn / pipe2 / waitpid / kill / dup2 / setsid / getrlimit /
# setrlimit / prlimit / select).  Default ON: anvil bootstrap M2
# milestone (= host-Emacs-free `bin/anvil --no-emacs`) requires them,
# but a future "mini build" can opt out without code surgery.
process-syscalls = []

[dependencies]
libc = "0.2"
# T77 (Wave 1 agent C, T54 substrate) — SQLite FFI binding for the
# anvil-XXX architecture α delegate chain.  `bundled` statically links
# libsqlite3 so a fresh checkout never picks up a system version skew
# (binary +~1.5 MiB on linux-x86_64).
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
# Phase 8.0.4 (Doc 44 §3.5) — JSON-RPC wire types in `src/mcp/` derive
# Serialize/Deserialize.  `derive` feature pulls in serde_derive (one
# extra proc-macro dep, no runtime cost).  `serde_json` already on the
# dep list reaches in for the dynamic `Value` plumbing.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Doc 47 §3.1 phase 6 / Stage 5a — `[profile.release]` hoisted to the
# workspace root `../Cargo.toml` so cargo applies one canonical policy
# (lto / panic=abort / strip) across `nelisp-runtime`, `anvil-runtime`,
# and the new `build-tool` member.  Member-level `[profile.*]` keys are
# ignored when run from the workspace anyway and emit a warning.
