[package]
name = "nelisp-sqlite-rs"
version = "0.5.0"
edition = "2021"
description = "Optional SQLite FFI extension crate for NeLisp"
license = "GPL-3.0-or-later"

[lib]
name = "nelisp_sqlite_rs"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
