[package]
name = "nelisp-syscall-fileio"
version = "0.1.0"
edition = "2021"
description = "Optional file I/O syscall extension crate for NeLisp"
license = "GPL-3.0-or-later"

[lib]
name = "nelisp_syscall_fileio"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
nelisp-syscall-types = { path = "../nelisp-syscall-types" }
